Extension/src/pages/common/styles/modal.module.pcss
.overlay {
    position: fixed;
    inset: 0px;
    z-index: var(--z-idx-options-modals);
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 32px 8px;
}

.wrapper {
    width: 100%;
    background-color: var(--fills-backgrounds-page-background-default);
    border: none;
    padding: 0px;
    outline: none;
    border-radius: 8px;
    overflow: auto;
    inset: 40px;

    &:has(.modalScrollable) {
        height: 100%;

        @media(min-height: 1090px) {
            height: auto;
        }
    }

    @media(min-width: 640px) {
        width: 600px;

        &:has(.modalScrollable) {
            max-height: 80%;
        }
    }
}


.modal {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    max-height: 100%;
    padding: 0;
    overflow-y: auto;
    background-color: var(--fills-backgrounds-page-background-default);

    * {
        box-sizing: border-box;
    }

    &.modalScrollable {
        overflow-y: hidden;

        /* show scrollbar only for scrollable content. AG-34984 */
        .content {
            overflow-y: auto;
            scrollbar-width: thin;
            scrollbar-color: var(--stroke-inputs-inactive-input-stroke-default) var(--fills-backgrounds-page-background-default);
        }

        .subtitle {
            margin-bottom: 12px;
        }
    }

    .content {
        width: 100%;
        padding: 32px 32px 0;
        overflow-x: hidden;
        position: relative;

        background:
            /* shadow cover bottom */
            linear-gradient(
                rgba(255, 255, 255, 0),
                var(--fills-backgrounds-page-background-default) 50%
            ) center bottom,

            /* shadow bottom */
            linear-gradient(
                rgba(0, 0, 0, 0),
                rgba(0, 0, 0, 0.1)
            ) center bottom;

        background-repeat: no-repeat;
        background-size: 100% 24px, 100% 16px;
        background-attachment: local, scroll;

        @media(max-width: 640px) {
            padding: 40px 16px 0 16px;
        }
    }

    .header {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        width: 100%;
    }

    .title {
        font-size: 24px;
        line-height: 1.2;
        font-weight: 700;
        margin-bottom: 12px;
        width: 100%;

        @media(max-width: 640px) {
            text-align: center;
        }
    }

    .subtitle {
        font-size: 16px;
        line-height: 24px;
        font-weight: 400;
        width: 100%;

        @media(max-width: 640px) {
            text-align: center;
        }
    }

    .btn {
        width: 50%;
        max-width: 300px;

        @media(max-width: 640px) {
            width: 100%;
            max-width: 100%;
        }
    }

    .btnClose {
        position: absolute;
        top: 16px;
        right: 16px;

        :global(.icon) {
            width: 24px;
            height: 24px;
            color: var(--stroke-icons-gray-icons-default);
        }
    }

    &.modalWithImage {
        flex-direction: row;
        align-items: stretch;
        padding: 32px;
        position: relative;

        .modalHeader {
            display: none;
        }

        .imageColumn {
            display: flex;
            align-items: flex-end;
            flex-shrink: 0;
        }

        .textColumn {
            flex: 1;
            display: flex;
            flex-direction: column;
            margin-left: 24px;
        }

        .actionsInline {
            display: flex;
            gap: 24px;
            align-items: center;
            margin-top: 24px;

            @media(max-width: 640px) {
                gap: 16px;
                flex-direction: column;
            }
        }

        @media(max-width: 640px) {
            flex-direction: column;
            align-items: center;
            padding: 40px 16px 32px;

            .modalHeader {
                display: flex;
                width: 100%;
                text-align: center;
            }

            .imageColumn {
                margin-top: 24px;
                justify-content: center;
            }

            .textColumn {
                width: 100%;
                margin-left: 0;
                margin-top: 16px;
                text-align: center;

                .title {
                    display: none;
                }
            }
        }
    }

    &:not(:has(.actions)) .content {
        padding-bottom: 32px;

        @media(max-width: 640px) {
            padding-bottom: 40px;
        }
    }

    .actions {
        width: 100%;
        padding: 24px 32px 32px;
        display: flex;
        gap: 24px;
        align-items: center;
        box-sizing: border-box;

        @media(max-width: 640px) {
            gap: 16px;
            padding: 24px 16px 32px;
            flex-direction: column;
        }
    }
}

